0.20.0	UNRELEASED

 * Drop support for Python 2. (Jelmer Vernooĳ)

0.19.15	2020-01-26

 * Properly handle files that are just executable for the
   current user. (Jelmer Vernooĳ, #734)

 * Fix handling of stored encoding in
   ``dulwich.porcelain.get_object_by_path`` on Python 3.
   (Jelmer Vernooĳ)

 * Support the include_trees and rename_detector arguments
   at the same time when diffing trees.
   (Jelmer Vernooĳ)

0.19.14	2019-11-30

 * Strip superfluous <> around email. (monnerat)

 * Stop checking for ref validity client-side. Users can
   still call check_wants manually. (Jelmer Vernooĳ)

 * Switch over to Google-style docstrings.
   (Jelmer Vernooĳ)

 * Add a ``dulwich.porcelain.active_branch`` function.
   (Jelmer Vernooĳ)

 * Cleanup new directory if clone fails. (Jelmer Vernooĳ, #733)

 * Expand "~" in global exclude path. (Jelmer Vernooĳ)

0.19.13	2019-08-19

 BUG FIXES

 * Avoid ``PermissionError``, since it is Python3-specific.
  (Jelmer Vernooĳ)

 * Fix regression that added a dependency on C git for the
   test suite. (Jelmer Vernooĳ, #720)

 * Fix compatibility with Python 3.8 - mostly deprecation warnings.
   (Jelmer Vernooĳ)

0.19.12	2019-08-13

 BUG FIXES

 * Update directory detection for `get_unstaged_changes` for Python 3.
   (Boris Feld, #684)

 * Add a basic ``porcelain.clean``. (Lane Barlow, #398)

 * Fix output format of ``porcelain.diff`` to match that of
   C Git. (Boris Feld)

 * Return a 404 not found error when repository is not found.

 * Mark ``.git`` directories as hidden on Windows.
   (Martin Packman, #585)

 * Implement ``RefsContainer.__iter__``
   (Jelmer Vernooĳ, #717)

 * Don't trust modes if they can't be modified after a file has been created.
   (Jelmer Vernooĳ, #719)

0.19.11	2019-02-07

 IMPROVEMENTS

 * Use fullname from gecos field, if available.
   (Jelmer Vernooĳ)

 * Support ``GIT_AUTHOR_NAME`` / ``GIT_AUTHOR_EMAIL``.
   (Jelmer Vernooĳ)

 * Add support for short ids in parse_commit. (Jelmer Vernooĳ)
